--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -33,8 +33,9 @@ $yellow-color: #e0b300;
 $yellowgreen-color: #C2E71D;
 $white-color: #fff;
 $pinkorange-color: #ff0033;
+$indigo-magazine: #30f;
 
-$primary-color: $red-color;
+$primary-color: $pinkorange-color;
 $action-color: $primary-color;
 $secondary-color: $green-color;
 
